fixing the use of index shard status